Fix word spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,5 +30,4 @@ body {
 p {
 	font-family: "Exo 2", sans-serif;
 	font-weight: 200;
-	text-justify: distribute;
 }
